добавлены стили футера и хедера

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,8 @@
-// Начните писать стили здесь
+@import "global/variables.scss";
+@import "global/global.scss";
+@import "global/common.scss";
+@import "blocks/header.scss";
+@import "blocks/main.scss";
+@import "blocks/footer.scss";
+@import "blocks/header/headerStyle.scss";
+@import "blocks/footer/footerStyle.scss";
