--- a/source/sass/blocks/header/nav.scss
+++ b/source/sass/blocks/header/nav.scss
@@ -1,9 +1,9 @@
 
 .site-list__item {
-  padding: 10px 60px 5px;
-  background-color: var(--blue);
-  color: var(--white);
+  padding: 10px 60px 5px 60px;
   line-height: 48px;
   text-align: center;
   font-weight: bold;
+  background-color: var(--blue);
+  color: var(--white);
 }
