добавлена стилизация шрифта блоков, внутренние отступы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,8 @@
 @import "global/variables.scss";
+@import "global/fonts.scss";
 @import "global/global.scss";
 @import "global/common.scss";
 @import "blocks/header/index.scss";
 @import "blocks/footer/index.scss";
+@import "blocks/main/index.scss";
+@import "blocks/photo/index.scss";
