переименованы файлы блоков, изменено подключение шрифтов, изменнены стили у страницы фото

--- a/source/sass/blocks/main/index.scss
+++ b/source/sass/blocks/main/index.scss
@@ -1,4 +1,4 @@
-@import "block1";
-@import "block2";
-@import "block3";
-@import "block4";
+@import "text.scss";
+@import "text-number-item.scss";
+@import "text-item.scss";
+@import "text-number-item-mod.scss";
