--- a/source/sass/blocks/photo/photo.scss
+++ b/source/sass/blocks/photo/photo.scss
@@ -9,16 +9,11 @@
   font-weight: 700;
 }
 
-.main-media__text-author {
-  font-size: 14px;
-  line-height: 24px;
-  text-align: start;
+.main-media__text_size_small {
   text-transform: lowercase;
+  font-weight: 400;
 }
 
-.main-media__likes-number {
-  font-size: 14px;
-  line-height: 24px;
-  text-align: start;
+.main-media__text_size_weight {
   font-weight: 700;
 }
