--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,7 +1,23 @@
 @font-face {
-  font-family: sans-serif;
-  src: url("/fonts/ptsans.woff2") format("woff2"),
-    url("/fonts/ptsans.woff") format("woff"),
-    url("/fonts/ptsansbold.woff2") format("woff2"),
-    url("/fonts/ptsansbold.woff") format("woff");
+  font-family: "PT Sans";
+  src: url("/source/fonts/ptsans.woff2") format("woff2"),
+    url("/source/fonts/ptsans.woff") format("woff");
+}
+
+@font-face {
+  font-family: "PT Sans";
+  src: url("/source/fonts/ptsansbold.woff2") format("woff2"),
+    url("/source/fonts/ptsansbold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("/source/fonts/notosans.woff2") format("woff2"),
+    url("/source/fonts/notosans.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("/source/fonts/notosansbold.woff2") format("woff2"),
+    url("/source/fonts/notosansbold.woff") format("woff");
 }
