--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "PT Sans", "Trebuchet MS", sans-serif;
+  font-family: "PT Sans", "Noto Sans", sans-serif;
   font-size: 18px;
   line-height: 26px;
   text-transform: uppercase;
