--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,5 +4,5 @@
 @import "global/common.scss";
 @import "blocks/header/index.scss";
 @import "blocks/footer/index.scss";
-@import "blocks/main/index.scss";
-@import "blocks/photo/index.scss";
+@import "blocks/page-main/index.scss";
+@import "blocks/page-photo/index.scss";
