--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,23 +1,35 @@
 @font-face {
   font-family: "PT Sans";
-  src: url("/source/fonts/ptsans.woff2") format("woff2"),
-    url("/source/fonts/ptsans.woff") format("woff");
+  src: url("../fonts/ptsans.woff2") format("woff2"),
+    url("../fonts/ptsans.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "PT Sans";
-  src: url("/source/fonts/ptsansbold.woff2") format("woff2"),
-    url("/source/fonts/ptsansbold.woff") format("woff");
+  src: url("../fonts/ptsansbold.woff2") format("woff2"),
+    url("../fonts/ptsansbold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Noto Sans";
-  src: url("/source/fonts/notosans.woff2") format("woff2"),
-    url("/source/fonts/notosans.woff") format("woff");
+  src: url("../fonts/notosans.woff2") format("woff2"),
+    url("../fonts/notosans.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Noto Sans";
-  src: url("/source/fonts/notosansbold.woff2") format("woff2"),
+  src: url("../fonts/notosansbold.woff2") format("woff2"),
     url("/source/fonts/notosansbold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
