--- a/source/sass/blocks/page-photo/main-media-item.scss
+++ b/source/sass/blocks/page-photo/main-media-item.scss
@@ -2,7 +2,7 @@
   padding: 22px 20px 22px 20px;
 }
 
-.main-media__text {
+.main-media-item__text {
   font-size: 14px;
   line-height: 24px;
   text-align: start;
