--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -18,3 +18,20 @@
   width: 320px;
   margin: 0 auto;
 }
+
+.text-transform {
+  text-transform: none;
+}
+
+.input-style {
+  appearance: none;
+  border: 0;
+  text-transform: uppercase;
+  background-color: var(--light-grey);
+}
+
+.button {
+  border: 0;
+  border-radius: 0;
+  padding: 0;
+}
