--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,4 @@
 @import "blocks/footer/index.scss";
 @import "blocks/page-main/index.scss";
 @import "blocks/page-photo/index.scss";
+@import "blocks/page-form/index.scss";
