--- a/source/sass/blocks/page-form/form-name.scss
+++ b/source/sass/blocks/page-form/form-name.scss
@@ -1,14 +1,18 @@
 .form-name__title {
-  font-size: 18px;
+  font-weight: 700;
+}
+
+.form-name__label {
+  font-size: 14px;
 
   &--size-bold {
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 700;
   }
 }
 
 .form-name__field {
-  width: 192px;
+  width: 194px;
   height: 58px;
   padding: 18px 22px 14px 22px;
   font-family: "PT Sans", "Verdana", sans-serif;
@@ -28,7 +32,7 @@
     padding: 18px 70px 14px 22px;
   }
 
-  &--size--area {
+  &--size-area {
     max-width: 279px;
     height: 160px;
     padding: 13px 23px 29px 21px;
