изменено название класса, изменен веб безопасный шрифт, изменены стили модификатора

--- a/source/sass/blocks/page-form/form-fields.scss
+++ b/source/sass/blocks/page-form/form-fields.scss
@@ -1,5 +1,5 @@
 .form-fields__button {
-  font-family: "PT Sans", "Verdana", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
   font-weight: bold;
   text-transform: uppercase;
