--- a/source/sass/blocks/page-form/form-fields.scss
+++ b/source/sass/blocks/page-form/form-fields.scss
@@ -1,7 +1,7 @@
 .form-fields__button {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: uppercase;
   color: var(--white);
   background-color: var(--blue);
