--- a/source/sass/blocks/page-main/index.scss
+++ b/source/sass/blocks/page-main/index.scss
@@ -1,3 +1,5 @@
 @import "title-wrapper.scss";
 @import "features-item.scss";
 @import "city-features-item.scss";
+@import "main-promo.scss";
+@import "page-main.scss";
