--- a/source/sass/blocks/header/main-nav-list.scss
+++ b/source/sass/blocks/header/main-nav-list.scss
@@ -1,8 +1,84 @@
+.main-nav-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .main-nav-list__item {
-  padding: 10px 60px 5px 60px;
+  padding: 2px 30px 5px 30px;
   line-height: 48px;
+  width: 100%;
   text-align: center;
-  font-weight: bold;
-  background-color: var(--blue);
-  color: var(--white);
+  font-weight: 700;
+  color: $white;
+  background-color: $blue;
+
+  @media (min-width: $tablet-width) {
+    width: 155px;
+    padding: 15px 0 15px 0;
+    font-size: 14px;
+    line-height: 26px;
+    color: $black;
+    background-color: $white;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 200px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+
+.main-nav-list__item:nth-child(4n+1) {
+  @media (min-width: $tablet-width) {
+    text-align: left;
+    padding-left: 24px;
+    padding-right: 10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+    padding-left: 41px;
+  }
+}
+
+.main-nav-list__item:nth-child(4n+2) {
+  @media (min-width: $tablet-width) {
+    text-align: left;
+    padding-left: 3px;
+    padding-right: 10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+    padding-left: 60px;
+  }
+}
+
+.main-nav-list__item:nth-child(4n-1) {
+  @media (min-width: $tablet-width) {
+    text-align: right;
+    padding-right: 8px;
+    margin-left: 111px;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: right;
+    padding-right: 57px;
+    margin-left: 300px;
+  }
+}
+
+.main-nav-list__item:nth-child(4n+4) {
+  @media (min-width: $tablet-width) {
+    width: 140px;
+    padding-left: 10px;
+    padding-right: 0;
+    text-align: right;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 200px;
+    text-align: right;
+    padding-right: 21px;
+  }
 }
