--- a/source/sass/blocks/page-main/city-features-item.scss
+++ b/source/sass/blocks/page-main/city-features-item.scss
@@ -1,14 +1,60 @@
 .city-features-item {
-  padding: 35px 25px 1px 69px;
+  display: flex;
+  flex-direction: column;
+  padding: 36px 25px 1px 69px;
+  background-color: $white;
+
+  @media (min-width: $tablet-width) {
+    width: 256px;
+    padding: 36px 45px 6px 45px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 400px;
+    padding-bottom: 10px;
+  }
+
+  &--padding-large {
+    padding-top: 27px;
+
+    @media (min-width: $tablet-width) {
+      order: 1;
+    }
+  }
+
+  &--padding {
+    padding-top: 25px;
+  }
 }
 
 .city-features-item__title {
+  margin-bottom: 15px;
   font-weight: 700;
-  text-align: start;
+  text-align: left;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 125px;
+    margin-bottom: 20px;
+    font-size: 21px;
+    text-align: center;
+  }
+
+  &--magrin {
+    margin-bottom: 13px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .city-features-item__text {
   font-size: 14px;
   line-height: 21px;
-  text-align: start;
+  text-align: left;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+    margin-bottom: 25px;
+  }
 }
