--- a/source/sass/blocks/page-main/features-item.scss
+++ b/source/sass/blocks/page-main/features-item.scss
@@ -1,19 +1,114 @@
 .features-item {
-  padding: 55px 12px 39px 13px;
-  color: var(--white);
-  background-color: var(--blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 12px 39px 13px;
+  color: $white;
+  background-color: $blue;
 
-  &--color {
-    padding: 26px 30px 24px 30px;
-    background-color: var(--grey);
+  @media (min-width: $tablet-width) {
+    width: 256px;
+    padding-right: 25px;
+    padding-left: 25px;
+    padding-bottom: 37px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 400px;
+    padding-right: 55px;
+    padding-left: 55px;
+    padding-bottom: 37px;
+  }
+
+  &--color-padding {
+    padding: 28px 33px 25px 33px;
+    color: $black;
+    background-color: $grey;
+
+    @media (min-width: $tablet-width) {
+      width: 256px;
+      padding: 43px 10px 43px 10px;
+      font-size: 21px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 400px;
+      padding: 43px 10px 64px 10px;
+      font-size: 21px;
+    }
+  }
+
+  &--padding {
+    padding-bottom: 37px;
+
+    @media (min-width: $tablet-width) {
+      padding: 43px 40px 37px 40px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 50px 90px 37px 90px;
+    }
   }
 }
 
 .features-item__title {
   font-weight: 700;
+  margin-bottom: 10px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 21px;
+    margin-bottom: 14px;
+  }
+
+  &--margin {
+    margin-top: 16px;
+
+    @media (min-width: $tablet-width) {
+      max-width: 160px;
+      margin-top: 0;
+      margin-bottom: 14px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 7px;
+    }
+  }
+
+  &--width {
+    margin-bottom: 10px;
+
+    @media (min-width: $tablet-width) {
+      max-width: 158px;
+      margin-bottom: 12px;
+    }
+  }
 }
 
 .features-item__text {
   font-size: 14px;
   line-height: 21px;
+
+  @media (min-width: $desktop-width) {
+    max-width: 300px;
+  }
+
+  &--width {
+    @media (min-width: $tablet-width) {
+      max-width: 147px;
+    }
+
+    @media (min-width: $desktop-width) {
+      max-width: 270px;
+    }
+  }
+}
+
+.features-item__number {
+  margin-bottom: 15px;
+  font-size: 14px;
+  line-height: 21px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 22px;
+  }
 }
