--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -17,6 +17,15 @@
 .container {
   width: 320px;
   margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1200px;
+    box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+  }
 }
 
 .text-transform {
