--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -3,10 +3,11 @@ body {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 26px;
+  min-width: 320px;
   text-transform: uppercase;
   text-align: center;
-  color: var(--black);
-  background-color: var(--white);
+  color: $black;
+  background-color: $light-grey;
 }
 
 a {
