--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,7 +1,7 @@
-:root {
-  --blue: #81b3d2;
-  --white: #ffffff;
-  --black: #000000;
-  --grey: #eeeeee;
-  --light-grey: #f2f2f2;
-}
+$blue: #81b3d2;
+$white: #ffffff;
+$black: #000000;
+$grey: #eeeeee;
+$light-grey: #f2f2f2;
+$tablet-width: 768px;
+$desktop-width: 1200px;
