--- a/source/sass/blocks/page-main/title-wrapper.scss
+++ b/source/sass/blocks/page-main/title-wrapper.scss
@@ -6,12 +6,12 @@
   background-color: $white;
 
   @media (min-width: $tablet-width) {
-    width: 768px;
+    width: $tablet-width;
     padding: 44px 124px 52px 124px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1200px;
+    width: $desktop-width;
     padding: 55px 300px 37px 300px;
   }
 
@@ -21,7 +21,7 @@
 
     @media (min-width: $tablet-width) {
       padding-top: 51px;
-      padding-bottom: 75px;
+      padding-bottom: 62px;
     }
 
     @media (min-width: $desktop-width) {
@@ -33,11 +33,24 @@
   &--padding {
     @media (min-width: $tablet-width) {
       padding-top: 57px;
-      padding-bottom: 73px;
+      padding-bottom: 61px;
     }
 
     @media (min-width: $desktop-width) {
       padding: 94px 350px 63px 350px;
+    }
+  }
+
+  &--padding-large {
+    padding-top: 36px;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 57px;
+      padding-bottom: 61px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 94px 350px 35px 350px;
     }
   }
 }
@@ -63,6 +76,25 @@
     }
   }
 
+  &--padding-large {
+    margin-top: 0;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 6px;
+      margin-bottom: 32px;
+      font-size: 30px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-top: 18px;
+    }
+  }
+
+  &--margin {
+    margin-top: 4px;
+    margin-bottom: 27px;
+  }
+
   &--text-large {
     margin-bottom: 17px;
     font-size: 21px;
@@ -71,17 +103,12 @@
       font-size: 30px;
       margin-bottom: 30px;
     }
-
-    @media (min-width: $desktop-width) {
-      font-size: 30px;
-      margin-bottom: 31px;
-    }
   }
 }
 
 .title-wrapper__description {
   font-size: 14px;
-  margin-bottom: 14px;
+  margin-bottom: $block-margin;
 
   &--width {
     width: 250px;
@@ -90,6 +117,10 @@
     @media (min-width: $tablet-width) {
       width: 450px;
     }
+  }
+
+  &--margin {
+    margin: 0;
   }
 }
 
@@ -106,13 +137,25 @@
   background-color: $blue;
 
   @media (min-width: $tablet-width) {
-    max-width: 458px;
+    max-width: $tablet-width-small;
     margin-top: 35px;
   }
 
   @media (min-width: $desktop-width) {
-    max-width: 458px;
+    max-width: $tablet-width-small;
     margin-top: 37px;
     margin-bottom: 29px;
+  }
+
+  &--size {
+    padding: 18px 25px 14px 25px;
+
+    @media (min-width: $tablet-width) {
+      max-width: $tablet-block-medium;
+    }
+
+    @media (min-width: $desktop-width) {
+      max-width: 480px;
+    }
   }
 }
