--- a/source/sass/blocks/footer/page-footer.scss
+++ b/source/sass/blocks/footer/page-footer.scss
@@ -3,17 +3,17 @@
   flex-direction: column;
   align-items: center;
   min-height: 243px;
-  background: $white;
+  background-color: $white;
 
   @media (min-width: $tablet-width) {
-    width: 768px;
+    width: $tablet-width;
     min-height: 120px;
     flex-direction: row;
     justify-content: space-between;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1200px;
+    width: $desktop-width;
   }
 }
 
@@ -35,11 +35,15 @@
   }
 }
 
-.page-footer-text {
+.page-footer__text {
   margin-top: 35px;
   margin-bottom: 34px;
   font-weight: 700;
   font-size: 21px;
+
+  &--margin {
+    margin-bottom: 30px;
+  }
 
   @media (min-width: $tablet-width) {
     margin: 48px 10px 46px 60px;
@@ -58,6 +62,10 @@
   margin-top: 25px;
   max-width: 160px;
   width: 100%;
+
+  &--margin {
+    margin-top: 27px;
+  }
 
   @media (min-width: $tablet-width) {
     margin-right: 44px;
