--- a/source/sass/blocks/header/main-nav.scss
+++ b/source/sass/blocks/header/main-nav.scss
@@ -3,14 +3,14 @@
   flex-direction: column;
 
   @media (min-width: $tablet-width) {
-    width: 768px;
+    width: $tablet-width;
     padding-left: 25px;
     padding-right: 25px;
     justify-content: space-between;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1200px;
+    width: $desktop-width;
     padding-left: 50px;
     padding-right: 50px;
   }
