--- a/source/sass/blocks/page-form/form-fields.scss
+++ b/source/sass/blocks/page-form/form-fields.scss
@@ -1,3 +1,90 @@
+.form-fields {
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+}
+
+.form-fields__name {
+  margin-top: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 21px;
+    padding-left: 56px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 51px;
+    padding-left: 79px;
+    margin-left: 0;
+  }
+}
+
+.form-fields__contacts {
+  margin-top: 21px;
+  margin-right: 0;
+
+  @media (min-width: $tablet-width) {
+    width: $tablet-block-large;
+    margin-top: 45px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: $desktop-block-width;
+    margin-top: 0;
+  }
+}
+
+.form-fields__viewpoints {
+  margin-top: 21px;
+  order: -1;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 54px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 137px;
+    margin-right: 0;
+  }
+}
+
+.form-fields__places {
+  margin-top: 16px;
+  margin-right: 0;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 25px;
+  }
+}
+
+.form-fields__emotions {
+  margin-top: 22px;
+  margin-right: 0;
+  margin-bottom: 11px;
+
+  @media (min-width: $tablet-width) {
+    width: $tablet-block-large;
+    margin-top: 11px;
+    margin-bottom: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: $desktop-block-width;
+    margin-bottom: 32px;
+  }
+}
+
 .form-fields__button {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
