--- a/source/sass/blocks/page-form/form-name.scss
+++ b/source/sass/blocks/page-form/form-name.scss
@@ -1,13 +1,157 @@
+.form-name {
+  display: flex;
+
+  &--padding {
+    padding-bottom: 2px;
+
+    @media (min-width: $tablet-width) {
+      width: $tablet-block-large;
+    }
+  }
+}
+
 .form-name__title {
   font-weight: 700;
+  padding: 0;
+  margin-bottom: 18px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 21px;
+    margin-bottom: 55px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 300px;
+  }
+
+  &--padding {
+    @media (min-width: $tablet-width) {
+      width: 308px;
+      margin-bottom: 45px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 33px;
+    }
+  }
+
+  &--margin {
+    margin-bottom: 16px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 19px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 60px;
+      padding-top: 0;
+      padding-right: 4px;
+    }
+  }
+
+  &--margin-small {
+    margin-bottom: 15px;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 27px;
+      margin-bottom: 54px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-top: 50px;
+      margin-bottom: 54px;
+    }
+  }
 }
 
 .form-name__label {
+  margin-right: 13px;
   font-size: 14px;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 13px;
+  }
+
+  &--margin {
+    padding-top: 17px;
+    margin-right: 14px;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 18px;
+    }
+  }
+
+  &--margin-large {
+    padding-top: 18px;
+    margin-right: 17px;
+
+    @media (min-width: $desktop-width) {
+      margin-right: 16px;
+    }
+  }
 
   &--size-bold {
     font-size: 18px;
     font-weight: 700;
+  }
+
+  &--weight {
+    font-size: 18px;
+    font-weight: 700;
+    margin-right: 0;
+    margin-left: 21px;
+    margin-top: 18px;
+
+    @media (min-width: $desktop-width) {
+      margin-left: 23px;
+      margin-top: 17px;
+    }
+  }
+
+  &--weight-margin {
+    font-size: 18px;
+    font-weight: 700;
+    margin-right: 0;
+    margin-left: 27px;
+    margin-top: 17px;
+
+    @media (min-width: $desktop-width) {
+      margin-left: 23px;
+    }
+  }
+}
+
+.form-name__label-telephone {
+  margin-right: 75px;
+  font-size: 14px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 21px;
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 28px;
+    padding-left: 0;
+    margin-right: 16px;
+  }
+}
+
+.form-name__label-mail {
+  margin-right: 90px;
+  font-size: 14px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 11px;
+    padding-left: 20px;
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 17px;
+    margin-top: 0;
+    padding-top: 28px;
+    padding-left: 0;
   }
 }
 
@@ -18,21 +162,222 @@
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
-  background-color: var(--light-grey);
+  background-color: $light-grey;
   border: 0 solid transparent;
+
+  @media (min-width: $desktop-width) {
+    width: 312px;
+  }
+
+  &--size-short {
+    width: 192px;
+
+    @media (min-width: $tablet-width) {
+      width: 178px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 312px;
+    }
+  }
 
   &--size-medium {
     width: 230px;
+
+    @media (min-width: $tablet-width) {
+      width: 216px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 350px;
+    }
+  }
+
+  &--size-large {
+    @media (min-width: $tablet-width) {
+      width: 180px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 314px;
+    }
   }
 
   &--size-big {
     width: 280px;
+    margin-top: 9px;
+    margin-bottom: 13px;
     padding-right: 70px;
+
+    @media (min-width: $tablet-width) {
+      width: $tablet-block-large;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 315px;
+    }
+  }
+
+  &--margin {
+    width: 280px;
+    margin-top: 6px;
+    margin-bottom: 23px;
+
+    @media (min-width: $tablet-width) {
+      width: $tablet-block-large;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 316px;
+      margin-top: 9px;
+    }
   }
 
   &--size-area {
-    max-width: 279px;
+    width: 279px;
     height: 160px;
     padding: 13px 23px 29px 21px;
+    margin-right: 0;
+    margin-bottom: 51px;
+    resize: none;
+
+    @media (min-width: $tablet-width) {
+      width: $tablet-block-large;
+      margin-bottom: 58px;
+      padding-top: 19px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: $desktop-block-width;
+    }
   }
+}
+
+.form-name-wrapper {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.form-name__wrapper {
+  display: flex;
+  margin-bottom: 18px;
+
+  @media (min-width: $tablet-width) {
+    width: 265px;
+    margin-bottom: 27px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 344px;
+  }
+
+  &--margin-large {
+    margin-bottom: 30px;
+  }
+
+  &--margin {
+    margin-bottom: 28px;
+
+    @media (min-width: $tablet-width) {
+      width: 220px;
+      margin-bottom: 35px;
+      margin-left: 50px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin: 0;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+  }
+
+  &--margin-small {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0;
+
+    @media (min-width: $tablet-width) {
+      flex-direction: column;
+      width: $tablet-block-large;
+    }
+
+    @media (min-width: $desktop-width) {
+      flex-direction: row;
+      width: 480px;
+      margin: 0;
+    }
+  }
+
+  &--margin-medium {
+    width: 279px;
+    flex-wrap: wrap;
+    margin: 0;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 0;
+      flex-direction: column;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: $desktop-block-width;
+      flex-direction: row;
+    }
+  }
+
+
+  &--order {
+    flex-direction: column;
+    margin-bottom: 0;
+
+    @media (min-width: $tablet-width) {
+      width: $tablet-block-large;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: $desktop-block-width;
+      flex-direction: row;
+      padding: 0;
+    }
+  }
+}
+
+.form-name__wrapper--margin:nth-child(2n) {
+  @media (min-width: $tablet-width) {
+    margin-left: 35px;
+  }
+}
+
+
+.form-name__wrapper--margin:nth-child(2) {
+  @media (min-width: $desktop-width) {
+    margin-left: 40px;
+  }
+}
+
+.form-name__wrapper--margin:nth-child(3) {
+  @media (min-width: $desktop-width) {
+    margin-left: 40px;
+  }
+}
+
+.form-name__wrapper--margin:nth-child(4) {
+  @media (min-width: $desktop-width) {
+    width: 200px;
+    margin-left: 20px;
+  }
+}
+
+.form-name__field-radio {
+  width: 48px;
+  height: 48px;
+}
+
+.form-name__field-checkbox {
+  width: 52px;
+  height: 52px;
+  margin: 0;
 }
