--- a/source/sass/blocks/page-form/page-form-main.scss
+++ b/source/sass/blocks/page-form/page-form-main.scss
@@ -3,7 +3,7 @@
 }
 
 .page-form-main__promo {
-  width: 320px;
+  width: $mobile-block-width;
   height: 158px;
 
   @media (min-width: $tablet-width) {
