--- a/source/sass/blocks/page-main/title-wrapper.scss
+++ b/source/sass/blocks/page-main/title-wrapper.scss
@@ -151,7 +151,7 @@
     padding: 18px 25px 14px 25px;
 
     @media (min-width: $tablet-width) {
-      max-width: $tablet-block-medium;
+      max-width: $tablet-width-medium;
     }
 
     @media (min-width: $desktop-width) {
