--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,8 +7,11 @@ $block-margin: 14px;
 $block-small: 256px;
 $block-medium: 260px;
 $block-large: 400px;
-$tablet-block-medium: 324px;
+$mobile-block-width: 320px;
+$tablet-width-medium: 324px;
 $tablet-width-small: 458px;
+$tablet-photo-width: 512px;
+$tablet-block-width-medium: 550px;
 $tablet-block-large: 648px;
 $tablet-width: 768px;
 $desktop-block-width: 960px;
