--- a/source/sass/blocks/page-main/features-item.scss
+++ b/source/sass/blocks/page-main/features-item.scss
@@ -2,15 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px 12px 39px 13px;
+  padding: 39px 12px 39px 13px;
   color: $white;
   background-color: $blue;
 
   @media (min-width: $tablet-width) {
     width: $block-small;
-    padding-right: 25px;
-    padding-left: 25px;
-    padding-bottom: 37px;
+    padding: 40px 25px 37px 25px;
   }
 
   @media (min-width: $desktop-width) {
@@ -21,24 +19,24 @@
   }
 
   &--color-padding {
-    padding: 28px 33px 25px 33px;
+    padding: 26px 33px 24px 33px;
     color: $black;
     background-color: $grey;
 
     @media (min-width: $tablet-width) {
       width: $block-small;
-      padding: 43px 10px 43px 10px;
+      padding: 43px 10px 41px 10px;
       font-size: 21px;
     }
 
     @media (min-width: $desktop-width) {
       width: $block-large;
-      padding-bottom: 64px;
+      padding-bottom: 61px;
     }
   }
 
   &--padding {
-    padding-bottom: 37px;
+    padding-bottom: 35px;
 
     @media (min-width: $tablet-width) {
       padding: 43px 40px 37px 40px;
@@ -46,18 +44,19 @@
 
     @media (min-width: $desktop-width) {
       width: $block-large;
-      padding: 50px 90px 37px 90px;
+      padding: 51px 90px 37px 90px;
     }
   }
 }
 
 .features-item__title {
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 11px;
 
   @media (min-width: $tablet-width) {
+    width: 150px;
     font-size: 21px;
-    margin-bottom: $block-margin;
+    margin-bottom: 13px;
   }
 
   &--margin {
@@ -75,11 +74,13 @@
   }
 
   &--width {
-    margin-bottom: 10px;
-
     @media (min-width: $tablet-width) {
       max-width: 158px;
       margin-bottom: 12px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 13px;
     }
   }
 }
@@ -93,6 +94,8 @@
   }
 
   &--width {
+    margin-bottom: 1px;
+
     @media (min-width: $tablet-width) {
       max-width: 147px;
     }
@@ -104,11 +107,17 @@
 }
 
 .features-item__number {
-  margin-bottom: 15px;
+  margin-bottom: 17px;
   font-size: 14px;
   line-height: 21px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 22px;
+  }
+
+  &--margin {
+    @media (min-width: $tablet-width) {
+      margin-bottom: 23px;
+    }
   }
 }
