--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -3,6 +3,7 @@ $white: #ffffff;
 $black: #000000;
 $grey: #eeeeee;
 $light-grey: #f2f2f2;
+$dark-grey: #eaeaea;
 $block-margin: 14px;
 $block-small: 256px;
 $block-medium: 260px;
@@ -11,7 +12,7 @@ $mobile-block-width: 320px;
 $tablet-width-medium: 324px;
 $tablet-width-small: 458px;
 $tablet-photo-width: 512px;
-$tablet-block-width-medium: 550px;
+$tablet-block-width-medium: 545px;
 $tablet-block-large: 648px;
 $tablet-width: 768px;
 $desktop-block-width: 960px;
